@@ -1,5 +1,6 @@
 ======================
 
+    ADDED: useraction: Drop a warning on JavaScript-errors
     ADDED: set krusaders icon acording to the users privileges
     ADDED: preserve date for local targets at copy / move
     ADDED: useraction: For JS-extensions the global variable scriptDir is available,
